Update setup script